# pydantic-cli

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  REQUIREMENTS-TEST.txt  REQUIREMENTS.txt  pyproject.toml  setup.py
.circleci/: config.yaml  config.yml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  python-app.yml  python-package.yml
misc-junk/: simple_schema2.json
pydantic_cli/: CHANGELOG.md  __init__.py  _compat.py  argparse.py  core.py  shell_completion.py  utils.py
pydantic_cli/examples/: __init__.py  simple.py  simple_schema.py  simple_with_boolean.py  simple_with_boolean_and_config.py  simple_with_boolean_custom.py  simple_with_custom.py  simple_with_custom_and_setup_log.py  simple_with_enum.py  simple_with_enum_by_name.py  simple_with_json_config.py  simple_with_json_config_and_namespace.py  simple_with_json_config_not_found.py  simple_with_list.py  simple_with_shell_autocomplete_support.py  subparser.py
pydantic_cli/tests/: __init__.py  test_examples_simple.py  test_examples_simple_boolean_and_config.py  test_examples_simple_required.py  test_examples_simple_schema.py  test_examples_simple_with_boolean.py  test_examples_simple_with_boolean_custom.py  test_examples_simple_with_custom.py  test_examples_simple_with_custom_and_setup_log.py  test_examples_simple_with_enum.py  test_examples_simple_with_enum_by_name.py  test_examples_simple_with_json_config.py  test_examples_simple_with_json_config_and_env.py  test_examples_simple_with_json_config_namespace.py  test_examples_simple_with_json_config_not_found.py  test_examples_simple_with_list.py  test_examples_simple_with_shell_autocomplete_support.py  test_examples_subparser.py  test_examples_with_json_config.py
