[project]
name = "pydantic_cli"
description = "Turn Pydantic defined Data Models into CLI Tools"
authors = [{ name = "M. Kocher", email = "michael.kocher@me.com" }]
dependencies = ["pydantic>=1.5"]
readme = "README.md"
requires-python = ">= 3.7"
dynamic = ['version']
urls = { 'Source Code' = 'http://github.com/mpkocher/pydantic-cli' }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=6.0.1", "mypy>=0.930", "black>=21.7b0", "pytest-cov>=4.0.0"]
shtab = ["shtap>=1.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=6.0.1", "mypy>=0.930", "black>=21.7b0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['pydantic_cli', 'pydantic_cli.examples']

[tool.hatch.version]
path = "pydantic_cli/_version.py"
