[project]
name = "pydantic_cli"
description = "Turn Pydantic defined Data Models into CLI Tools"
authors = [{ name = "M. Kocher", email = "michael.kocher@me.com" }]
dependencies = ["pydantic>=2.8.2"]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ['version']
urls = { 'Source Code' = 'http://github.com/mpkocher/pydantic-cli' }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=8.2.2", "pytest-cov>=4.0.0", "mypy>=1.10.1", "black>=24.4.2"]
shtab = ["shtab>=1.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['pydantic_cli', 'pydantic_cli.examples']

[tool.hatch.bulid.targets.wheel.sources]
src = "pydantic_cli"

[tool.hatch.version]
path = "pydantic_cli/_version.py"

[tool.hatch.build]
include = ['CHANGELOG.md', 'pydantic_cli']
